# Lame-Phish

./: README.md  pyproject.toml
data/final_v1/: goose_setlists.csv  goose_shows.csv
data/v1_goose/: goose_shows.json
documents/execution/: dev_log.md  implementation_schedule.md
documents/execution/dev_logs/: 2025-07-19.md  Initialization.md
documents/planning/: implementation_schedule.md  prd.md  project_context.md
scripts/: explore_v1_api.py  fetch_goose_v1.py
src/data/: api_client.py
